--- a/.ci_support/linux_ppc64le_.yaml
+++ b/.ci_support/linux_ppc64le_.yaml
@@ -5,7 +5,7 @@ aws_c_common:
 aws_c_http:
 - 0.9.1
 aws_c_io:
-- 0.15.2
+- 0.15.3
 aws_c_sdkutils:
 - 0.2.1
 c_compiler:
@@ -23,6 +23,6 @@ channel_sources:
 channel_targets:
 - conda-forge main
 docker_image:
-- quay.io/condaforge/linux-anvil-cos7-x86_64
+- quay.io/condaforge/linux-anvil-x86_64:alma9
 target_platform:
 - linux-ppc64le
